--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "react": "^19.1.1",
+    "react-audio-player-component": "^1.2.4",
     "react-dom": "^19.1.1",
+    "react-h5-audio-player": "^3.10.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "typescript": "^5.9.3",
     "vite": "^7.1.7"
   }
 }
