--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-audio-player-component": "^1.2.4",
     "react-dom": "^19.1.1",
     "react-h5-audio-player": "^3.10.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "tailwindcss": "^4.1.17"
